// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div>
  <div
    className="mb-5"
    key="0"
  >
    <Component
      buttonText="Edit"
      isCompleted={false}
      onEdit={[MockFunction]}
      title="Personal Details"
    />
  </div>
  <div
    className="mb-5"
    key="1"
  >
    <Component
      buttonText="Edit"
      isCompleted={false}
      onEdit={[MockFunction]}
      title="Primary ID"
    />
  </div>
  <div
    className="mb-5"
    key="2"
  >
    <Component
      buttonText="Edit"
      isCompleted={false}
      onEdit={[MockFunction]}
      title="Secondary ID"
    />
  </div>
  <div
    className="mb-5"
    key="3"
  >
    <Component
      buttonText="Edit"
      isCompleted={true}
      onEdit={[MockFunction]}
      title="Address History"
    />
  </div>
  <div
    className="mb-5"
    key="4"
  >
    <Component
      buttonText="Edit"
      isCompleted={false}
      onEdit={[MockFunction]}
      title="Declaration and Risk Assessment"
    />
  </div>
  <div
    className="mb-5"
    key="5"
  >
    <Component
      buttonText="Edit"
      isCompleted={true}
      onEdit={[MockFunction]}
      title="PEP Search"
    />
  </div>
  <div
    className="mb-5"
    key="6"
  >
    <Component
      buttonText="Edit"
      isCompleted={true}
      onEdit={[MockFunction]}
      title="Experian "
    />
  </div>
  <div
    className="mb-5"
    key="7"
  >
    <Component
      buttonText="Edit"
      isCompleted={true}
      onEdit={[MockFunction]}
      title="Report "
    />
  </div>
</div>
`;

exports[`checklist-detail ChecklistDetail should match snapshot when loading 1`] = `<Loader />`;

exports[`checklist-detail ChecklistDetail should match snapshot when not loading 1`] = `
<Connect(ErrorBoundary)>
  <div>
    <div>
      <a>
        Back to Client/Logout
      </a>
    </div>
    <div>
      <a>
        Customise Form
      </a>
    </div>
  </div>
  <div
    className="mb-5"
  >
    <Component
      title="Ms Saoirse Chadwick"
    />
  </div>
  <div
    className="mb-5"
    key="0"
  >
    <Component
      buttonText="Edit"
      isCompleted={false}
      title="Personal Details"
    />
  </div>
  <div
    className="mb-5"
    key="1"
  >
    <Component
      buttonText="Edit"
      isCompleted={false}
      title="Primary ID"
    />
  </div>
  <div
    className="mb-5"
    key="2"
  >
    <Component
      buttonText="Edit"
      isCompleted={false}
      title="Secondary ID"
    />
  </div>
  <div
    className="mb-5"
    key="3"
  >
    <Component
      buttonText="Edit"
      isCompleted={true}
      title="Address History"
    />
  </div>
  <div
    className="mb-5"
    key="4"
  >
    <Component
      buttonText="Edit"
      isCompleted={false}
      title="Declaration and Risk Assessment"
    />
  </div>
  <div
    className="mb-5"
    key="5"
  >
    <Component
      buttonText="Edit"
      isCompleted={true}
      title="PEP Search"
    />
  </div>
  <div
    className="mb-5"
    key="6"
  >
    <Component
      buttonText="Edit"
      isCompleted={true}
      title="Experian "
    />
  </div>
  <div
    className="mb-5"
    key="7"
  >
    <Component
      buttonText="Edit"
      isCompleted={true}
      title="Report "
    />
  </div>
  <Component
    afterClose={[MockFunction]}
    id="123"
    modalContentType="PROFILE"
    visible={true}
  />
</Connect(ErrorBoundary)>
`;
